--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,4 @@
 appianUserName: pc.performance
 appianPasswordEncoded: RVBDUGFzc3dvcmQxMjMh
+org.gradle.jvmargs=-Xmx2500m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
