--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,10 @@ buildscript {
     }
     dependencies {
       classpath 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.2'
+	  classpath "org.jfrog.buildinfo:build-info-extractor-gradle:latest.release"
     }
  }
+ apply plugin: "com.jfrog.artifactory"
 
  import groovyx.net.http.RESTClient
  import groovyx.net.http.HTTPBuilder
@@ -76,6 +78,7 @@ buildscript {
        // Perform transformation
        transformer.transform(new StreamSource(new StringReader(testRunResults)), new StreamResult(finalXML))
 	   println "Creating new XML file..."
-     }
+	 
+	 }
      println "System Test Completed"
  }
